# yast-iplb

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  series  vserver_conf.ycp  yast2-iplb.spec.in
agents/: Makefile.am  iplb.scr
doc/: Makefile  Makefile.am  Makefile.in
doc/autodocs/: Makefile  Makefile.am  Makefile.in
package/: yast2-iplb.changes  yast2-iplb.spec
src/: Iplb.ycp  Makefile.am  common.ycp  complex.ycp  dialogs.ycp  global_conf.ycp  helps.ycp  iplb.ycp  iplb_auto.ycp  iplb_proposal.ycp  vserver_conf.ycp  wizards.ycp
src/clients/: iplb.rb  iplb_auto.rb  iplb_proposal.rb
src/desktop/: iplb.desktop  org.opensuse.yast.IPLB.desktop
src/include/iplb/: common.rb  complex.rb  dialogs.rb  global_conf.rb  helps.rb  vserver_conf.rb  wizards.rb
src/modules/: Iplb.rb
src/scrconf/: iplb.scr
testsuite/: Makefile  Makefile.in
testsuite/tests/: Iplb.out  Iplb.rb  Iplb.ycp
